--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,6 @@ Django==1.9
 django-appconf==1.0.1
 django-compressor==2.0
 django-modelcluster==1.1
-django-storages==1.1.8
--e git+https://github.com/caskroom/homebrew-cask.git@89d950bb46e61d77a304ebe07c8137976749ac42#egg=django_storages_redux
 django-taggit==0.18.0
 django-toolbelt==0.0.1
 django-treebeard==3.0
@@ -30,3 +28,4 @@ Unidecode==0.4.19
 wagtail==1.3rc1
 wheel==0.26.0
 Willow==0.2.2
+django-storages-redux
