--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Django==1.9
 django-appconf==1.0.1
 django-compressor==2.0
 django-modelcluster==1.1
--e git+https://github.com/caskroom/homebrew-cask.git@89d950bb46e61d77a304ebe07c8137976749ac42#egg=django_storages_redux
+django_storages_redux
 django-taggit==0.18.0
 django-toolbelt==0.0.1
 django-treebeard==3.0
